--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -112,8 +112,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: //#159957
-    #0D0050;; }
+  color: white; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
